package io.aurigraph.v11.grpc;

import io.quarkus.grpc.GrpcService;
import io.smallrye.mutiny.Multi;
import io.smallrye.mutiny.Uni;
import io.smallrye.common.annotation.RunOnVirtualThread;
import jakarta.inject.Inject;
import org.jboss.logging.Logger;

import io.aurigraph.v11.TransactionService;
import com.google.protobuf.Empty;
import com.google.protobuf.Timestamp;

import java.time.Instant;
import java.util.concurrent.atomic.AtomicLong;

/**
 * High-Performance Aurigraph V11 gRPC Service Implementation
 * 
 * Simplified implementation that provides basic monitoring capabilities
 * while the full gRPC implementation is being developed.
 */
@GrpcService
public class HighPerformanceGrpcService implements MonitoringService {

    private static final Logger LOG = Logger.getLogger(HighPerformanceGrpcService.class);

    // Performance tracking
    private final AtomicLong totalRequests = new AtomicLong(0);
    private final Instant startupTime = Instant.now();

    @Inject
    TransactionService transactionService;

    /**
     * Get health status of the system
     */
    @Override
    @RunOnVirtualThread
    public Uni<HealthResponse> getHealth(Empty request) {
        totalRequests.incrementAndGet();
        
        return Uni.createFrom().item(() -> {
            long uptime = Instant.now().getEpochSecond() - startupTime.getEpochSecond();
            
            return HealthResponse.newBuilder()
                .setStatus(HealthStatus.HEALTH_STATUS_HEALTHY)
                .setVersion("11.0.0-hp-grpc")
                .setUptimeSince(Timestamp.newBuilder()
                    .setSeconds(startupTime.getEpochSecond())
                    .setNanos(startupTime.getNano())
                    .build())
                .putComponents("transaction-service", ComponentHealth.newBuilder()
                    .setStatus(HealthStatus.HEALTH_STATUS_HEALTHY)
                    .setMessage("Transaction service operational")
                    .build())
                .build();
        });
    }

    /**
     * Get performance statistics
     */
    @Override
    @RunOnVirtualThread
    public Uni<PerformanceStats> getPerformanceStats(Empty request) {
        totalRequests.incrementAndGet();
        
        return Uni.createFrom().item(() -> {
            var stats = transactionService.getStats();
            
            return PerformanceStats.newBuilder()
                .setCurrentTps(1000.0) // Mock value
                .setPeakTps(2000.0) // Mock value
                .setAverageLatencyMs(10.5) // Mock value
                .setP95LatencyMs(25.0) // Mock value
                .setP99LatencyMs(50.0) // Mock value
                .setTotalTransactions(stats.totalProcessed())
                .setSuccessfulTransactions(stats.totalProcessed())
                .setFailedTransactions(0)
                .setCpuUsagePercent(25.0) // Mock value
                .setMemoryUsagePercent(35.0) // Mock value
                .setActiveConnections(100) // Mock value
                .setMeasuredAt(Timestamp.newBuilder()
                    .setSeconds(Instant.now().getEpochSecond())
                    .setNanos(Instant.now().getNano())
                    .build())
                .build();
        });
    }

    /**
     * Get system metrics
     */
    @Override
    @RunOnVirtualThread
    public Uni<MetricsResponse> getMetrics(MetricsRequest request) {
        totalRequests.incrementAndGet();
        
        return Uni.createFrom().item(() -> {
            var builder = MetricsResponse.newBuilder();
            
            // Add basic system metrics
            builder.addMetrics(Metric.newBuilder()
                .setName("system.requests.total")
                .setValue(totalRequests.get())
                .setTimestamp(Timestamp.newBuilder()
                    .setSeconds(Instant.now().getEpochSecond())
                    .setNanos(Instant.now().getNano())
                    .build())
                .putLabels("service", "aurigraph-v11")
                .build());
                
            builder.addMetrics(Metric.newBuilder()
                .setName("system.uptime.seconds")
                .setValue(Instant.now().getEpochSecond() - startupTime.getEpochSecond())
                .setTimestamp(Timestamp.newBuilder()
                    .setSeconds(Instant.now().getEpochSecond())
                    .setNanos(Instant.now().getNano())
                    .build())
                .putLabels("service", "aurigraph-v11")
                .build());
            
            return builder.build();
        });
    }

    /**
     * Stream real-time metrics
     */
    @Override
    public Multi<Metric> streamMetrics(StreamMetricsRequest request) {
        LOG.info("Starting metrics stream with interval: " + request.getIntervalSeconds() + "s");
        
        return Multi.createFrom().ticks().every(java.time.Duration.ofSeconds(request.getIntervalSeconds()))
            .onItem().transform(tick -> {
                totalRequests.incrementAndGet();
                
                return Metric.newBuilder()
                    .setName("system.ticks")
                    .setValue(tick)
                    .setTimestamp(Timestamp.newBuilder()
                        .setSeconds(Instant.now().getEpochSecond())
                        .setNanos(Instant.now().getNano())
                        .build())
                    .putLabels("service", "aurigraph-v11")
                    .putLabels("type", "streaming")
                    .build();
            })
            .select().first(1000); // Limit to prevent infinite streams in testing
    }
}